--- a/index.html
+++ b/index.html
@@ -7,11 +7,29 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>reveal.js</title>
+    <title>Vim Workshop</title>
 
-    <link rel="stylesheet" href="dist/reset.css" />
-    <link rel="stylesheet" href="dist/reveal.css" />
-    <link rel="stylesheet" href="dist/theme/black.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/reset.min.css"
+      integrity="sha512-Mjxkx+r7O/OLQeKeIBCQ2yspG1P5muhAtv/J+p2/aPnSenciZWm5Wlnt+NOUNA4SHbnBIE/R2ic0ZBiCXdQNUg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/reveal.min.css"
+      integrity="sha512-WFGU7IgfYR0dq5aORzbD+NApAXdExNZFb7LaoO8olYImBW/iZxAwjKEuT+oYcFR6gOd+DAFssq/icMn8YVbQxQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/theme/black.min.css"
+      integrity="sha512-DKeDMgkMDBNgY3g8T6H6Ft5cB7St0LOh5d69BvETIcTrP0E3d3KhANTMs5QOTMnenXy6JVKz/tENmffCLeXPiQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <style>
       #comparison-list {
@@ -222,11 +240,25 @@
       </div>
     </div>
 
-    <script src="dist/reveal.js"></script>
-    <script src="plugin/zoom/zoom.js"></script>
-    <script src="plugin/notes/notes.js"></script>
-    <script src="plugin/markdown/markdown.js"></script>
-    <script src="plugin/highlight/highlight.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/reveal.js"
+      integrity="sha512-46BlbGDQDy4ki38kj1yCeCSSQXyyZUHsqDX02+RZaTYdrJL+Sqr6TGrwlSP8soII5Dk4SZDb2bDRcmcyHmYAvQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/plugin/zoom/zoom.min.js"
+      integrity="sha512-tJcau3GX6QUQI6gBHa8a4NNkvUpPVfDz8Gn0Ay589G6vCpNVqgcc4PM/i5ncyrtRggeSDE7yzqYw/A0sKTwGWg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/plugin/notes/notes.min.js"
+      integrity="sha512-yXOjsMbgGf4hR0LU+GpyMvCxK0cQ4oYEwBbW0DTVW+hFsMmuN86J60roDyj5ge9b9xLpzV7YLVVBpYh3eoPBJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <script>
       // More info about initialization & config:
       // - https://revealjs.com/initialization/
@@ -258,7 +290,7 @@
         ],
 
         // Learn about plugins: https://revealjs.com/plugins/
-        plugins: [RevealZoom, RevealMarkdown, RevealHighlight, RevealNotes],
+        plugins: [RevealZoom, RevealNotes],
       });
     </script>
   </body>
