--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <h2>What is Vim?</h2>
           <p class="fragment fade-up">A Text Editor!</p>
           <div class="r-stack">
-            <a href="assets/assets/hello.mov" target="_blank">
+            <a href="assets/hello.mov" target="_blank">
               <video
                 autoplay
                 class="fragment fade-in-then-out"
