Use cdn for socket.js

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         // Don't forget to add the dependencies
         dependencies: [
           {
-            src: "http://111.220.134.200:1948/socket.io/socket.io.js",
+            src: "https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.min.js",
             async: true,
           },
           { src: "https://unpkg.com/reveal-multiplex/client.js", async: true },
