Use Heroku socket.io server with SSL

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           // Example values. To generate your own, see the socket.io server instructions.
           secret: null, // Obtained from the socket.io server. Gives this (the master) control of the presentation
           id: "98d58d941f467819", // Obtained from socket.io server
-          url: "http://111.220.134.200:1948/", // Location of socket.io server
+          url: "https://reveal-multiplex.herokuapp.com:1948", // Location of socket.io server
         },
 
         // Don't forget to add the dependencies
