--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <link rel="icon" href="assets/favicon-228_x_228.png" sizes="228x228">
 
     <title>Vim Workshop</title>
 
