Add vimjs to repo

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <section>
           <h2>Slide 1</h2>
           <iframe
-            data-src="http://localhost:3000/vim.html"
+            data-src="vimjs/vim.html"
             data-preload
             width="600px"
             height="500px"
@@ -230,7 +230,7 @@
         <section>
           <h2>Slide 3</h2>
           <iframe
-            data-src="http://localhost:3000/vim.html"
+            data-src="vimjs/vim.html"
             data-preload
             width="600px"
             height="500px"
